# mori

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.github/: dependabot.yml
config/: agents.yaml.example  config.yaml  mcp.json.example  models.yaml.example
config/template/: README.md  custom_example.jinja2
gui/: app.py
logger/: __init__.py  config.py
mori/: __init__.py  config.py  mori.py
mori/agent/: __init__.py  factory.py
mori/mcp/: README.md  __init__.py
mori/template/: __init__.py  loader.py
mori/template/internal_template/: __init__.py  mori.jinja2
mori/tool/: __init__.py  factory.py
mori/tool/internal_tools/: example_tools.py  memory_tools.py
mori/utils/: model_wrapper.py
tests/: test_config.py  test_template.py
